2004-06-27  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* shimbun/sb-exconn.el: New module.

2004-06-26  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-mailman.el [shimbun-mailman-ja]: New class.
	(shimbun-make-contents) [shimbun-mailman-ja]: New method.
	(shimbun-mailman-ja-make-contents): New function.

	* sb-squeak-ja.el: Inherit `shimbun-mailman-ja' instead of
	`shimbun-mailman'.
	(shimbun-make-contents, shimbun-squeak-ja-make-contents): Removed.

	* sb-namazu.el: Inherit `shimbun-mailman-ja' instead of
	`shimbun-mailman'.
	(shimbun-make-contents, shimbun-namazu-make-contents): Removed.

2004-06-25  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-namazu.el (shimbun-namazu-groups): Add
	"kakasi-commits", "kakasi-dev" and "sary".

2004-06-25  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-canonicalize-url): New function.
	(w3m-input-url, w3m-browse-url): Call the above.
	(w3m-w3m-canonicalize-url): Abolished.
	(w3m-w3m-attributes, w3m-w3m-retrieve): Do not call the abolished
	function.
	(w3m-url-hierarchical-schemes): Add `ftps'.

2004-06-25  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-emacs-w3m.el: New file.

	* shimbun/sb-namazu.el (shimbun-namazu-groups): Remove "emacs-w3m"
	entry.

2004-06-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-add-w3m-initial-frames): Share the opened frame
	in w3m-initial-frames over all emacs-w3m buffers if w3m-use-tab is
	non-nil.
	(w3m-delete-w3m-initial-frames): New function; add it to
	delete-frame-functions or delete-frame-hook, or merge into
	delete-frame using defadvice.
	(w3m-delete-frames-and-windows): Return to the former buffer after
	performing walk-windows; don't manage w3m-initial-frames.

	* w3m.el (w3m-delete-buffer): Don't manage w3m-initial-frames.

2004-06-24  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-bbc.el (shimbun-bbc-content-start): Relaxed.

2004-06-23  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
